Biographies for people.

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,8 +1,24 @@
 
 /* Move the content down, to make room for the nav bar. */
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #eeeeee;
+    padding-top:6px;
+}
 body > .container {
-    padding-top: 70px;
-    flex: 1;
+    padding-top: 40px;
 }
 
 /* Custom app styles */
