--- a/templates/person/new_popup.html.twig
+++ b/templates/person/new_popup.html.twig
@@ -1,9 +1,9 @@
-{% extends 'base.html.twig' %}
+{% extends 'popup.html.twig' %}
 
-    {% block title %}Edit Person {% endblock %}
+    {% block title %}New Person {% endblock %}
 
     {% block body %}
-        <h1>Edit Person</h1>
+        <h1>New Person</h1>
 
         {% embed 'person/partial/form.html.twig' %}
         {% endembed %}
