--- a/templates/place/new.html.twig
+++ b/templates/place/new.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-    {% block title %}Edit Person {% endblock %}
+    {% block title %}New Place {% endblock %}
 
     {% block body %}
-        <h1>Edit Person</h1>
+        <h1>New Place</h1>
 
-        {% embed 'person/partial/form.html.twig' %}
+        {% embed 'place/partial/form.html.twig' %}
         {% endembed %}
 
     {% endblock %}
