--- a/templates/person/new.html.twig
+++ b/templates/person/new.html.twig
@@ -1,17 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>Person Creation</h1>
+    {% block title %}New Person {% endblock %}
 
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <div class="form-group">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-10">
-            <input type="submit" value="Create" class="btn btn-primary" />
-            <a href="{{ path('person_index') }}" class="btn btn-warning">Cancel</a>
-        </div>
-    </div>
-    {{ form_end(form) }}
+    {% block body %}
+        <h1>New Person</h1>
 
-{% endblock %}
+        {% embed 'person/partial/form.html.twig' %}
+        {% endembed %}
+
+    {% endblock %}
+
+    {% block javascripts %}
+        {% include '@NinesEditor/editor/widget.html.twig' %}
+    {% endblock %}
