--- a/templates/person/show.html.twig
+++ b/templates/person/show.html.twig
@@ -1,54 +1,54 @@
 {% extends 'base.html.twig' %}
 
-{% block pageheader %}
-    <h1>Person</h1>
-{% endblock %}
+{% block title %}Person Details {% endblock %}
+
+ {% block pageheader %}
+     <h1>Person Details</h1>
+ {% endblock %}
 
 {% block body %}
 
-    <div class="btn-toolbar">
-        <div class="btn-group pull-right">
-            <a href="{{ path('person_index') }}" class="btn btn-default">
-                <span class="glyphicon glyphicon-arrow-left"></span> Back
-            </a>
+        <div class='btn-toolbar pull-right'>
+            <div class='btn-group'>
+                <a href="{{ path('person_index') }}" class="btn btn-default">
+                    <span class="glyphicon glyphicon-arrow-left"></span> Back
+                </a>
+            </div>
             {% if is_granted('ROLE_CONTENT_ADMIN') %}
-                <a href="{{ path('person_edit', { 'id': person.id }) }}" class="btn btn-default">
-                    <span class='glyphicon glyphicon-edit'></span> Edit
-                </a>
-                <a href="{{ path('person_delete', { 'id': person.id }) }}" class="btn btn-default" data-confirm="Are you sure you want to delete this Person?">
-                    <span class='glyphicon glyphicon-remove'></span> Delete
-                </a>
+            <div class='btn-group'>
+                <a href="{{ path('person_edit', {'id': person.id }) }}" class="btn btn-default">
+                    <span class="glyphicon glyphicon-edit"></span> Edit </a>
+            </div>
+            <div class='btn-group'>
+                <form class='delete-form' method="post" action="{{ path('person_delete', {'id': person.id }) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                    <input type="hidden" name="_method" value="DELETE">
+                    <input type="hidden" name="_token" value="{{ csrf_token("delete" ~ person.id) }}">
+                    <button class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span> Delete</button>
+                </form>
+            </div>
             {% endif %}
         </div>
-    </div>
-    <table class="table table-bordered table-condensed table-hover table-striped">
-        <tbody>
-            <tr>
-                <th>Full Name</th>
-                <td>{{ person.fullName }}</td>
-            </tr>
-            <tr>
-                <th>Created</th>
-                <td>{% if person.created %}{{ person.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-            <tr>
-                <th>Updated</th>
-                <td>{% if person.updated %}{{ person.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
-            </tr>
-        </tbody>
-    </table>
 
-    {% if person.contributions|length > 0 %}
-        <h2>Works</h2>
-        <ul>
-            {% for contribution in person.contributions %}
-                <li>
-                    {% include 'work/workBrief.html.twig' with {'work': contribution.work} %}
-                </li>
-            {% endfor %}
-        </ul>
+    {% embed 'person/partial/detail.html.twig' %}
+    {% endembed %}
+
+    <h2>Images</h2>
+    {% if is_granted('ROLE_CONTENT_ADMIN') %}
+        <div class='btn-toolbar pull-right'>
+            <div class='btn-group'>
+                <a href="{{ path('person_new_image', {'id': person.id }) }}" class="btn btn-default">
+                    <span class="glyphicon glyphicon-plus"></span> Add Image </a>
+            </div>
+        </div>
+        <div class='clearfix'></div>
     {% endif %}
+    {% embed '@NinesMedia/image/partial/list.html.twig' with {
+        'images': person.images,
+        'path_delete': 'person_delete_image',
+        'path_edit': 'person_edit_image',
+        'entity_id': person.id,
+    } %}
+    {% endembed %}
 
-    {% include '@NinesFeedback/comment/comment-interface.html.twig' with { 'entity': person } %}
 
 {% endblock %}
