--- a/templates/place/search.html.twig
+++ b/templates/place/search.html.twig
@@ -1,19 +1,19 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Person Search{% endblock %}
+{% block title %}Place Search{% endblock %}
 
  {% block pageheader %}
-     <h1>Person Search</h1>
-     {% if people|length %}
+     <h1>Place Search</h1>
+     {% if places|length %}
          <p class="count">
-             Displaying {{ people|length }} people of {{ people.getTotalItemCount }} total.
+             Displaying {{ places|length }} places of {{ places.getTotalItemCount }} total.
          </p>
      {% endif %}
  {% endblock %}
 
 {% block body %}
 
-    <form method="get" action="{{ path('person_search') }}" class="form-horizontal">
+    <form method="get" action="{{ path('place_search') }}" class="form-horizontal">
         <fieldset>
             <legend>Search</legend>
             <div class='form-group'>
@@ -42,13 +42,13 @@
         </fieldset>
     </form>
 
-    {% if people|length %}
+    {% if places|length %}
 
-        {% embed 'person/partial/table.html.twig' %}
+        {% embed 'place/partial/table.html.twig' %}
         {% endembed %}
 
         <div class="navigation">
-            {{ knp_pagination_render(people) }}
+            {{ knp_pagination_render(places) }}
         </div>
     {% endif %}
 
