--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block jumbo %}
     <div class="container">
-            <h1>{{ homepage.title }}</h1>
+            <h1>{{ homepage.title|raw }}</h1>
     </div>
 {% endblock %}
 
@@ -15,6 +15,7 @@
         rgba(0, 0, 0, 0.2)
     ),
     url('{{ asset('img/Weave-Ball.jpg') }}');
+    text-shadow: 1px 1px 2px black;
 }
 </style>
 {% endblock %}
