--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -82,7 +82,7 @@
                 <p>
                     <b>New Narratives in the History of Philosophy</b>
                     <br/>
-                    <a href="docs/sphinx/index.html">Documentation</a> |
+                    <a href="{{ asset('docs/sphinx/index.html') }}">Documentation</a> |
                     <a href="{{ path('privacy') }}">Privacy</a> |
                     <a href="https://github.com/sfu-dhil/new-narratives">GitHub</a>
                 </p>
