--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -43,7 +43,7 @@
                 <div id="navbar" class="collapse navbar-collapse">
                     {{ knp_menu_render('main') }}
                     {{ knp_menu_render('nines_blog_pages') }}
-                    {% if is_granted('ROLE_COMMENT_ADMIN') %}
+                    {% if is_granted('ROLE_FEEDBACK_ADMIN') %}
                         {{ knp_menu_render('nines_feedback') }}
                     {% endif %}
                     {{ knp_menu_render('nines_user_nav') }}
